--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
 
-            {% if form.errors %}
+            {% if form and form.errors %}
                 <div class="bg-red-50 border border-red-200 rounded-xl p-4 animate-bounce-in">
                     <div class="flex items-center">
                         <i class="fas fa-exclamation-triangle text-red-500 mr-2"></i>
